a1/brendan_gordon/TEST_PROGRAMS/invalidtype/cheuk_siow/invalidtype3.min
# Invalid type program 3: redeclare variable.

var x: int;
var x: float;

x = 10;
y = 1.0;

